# aquila

./: .clang-format  .gitignore  AGENTS.md  AGENTS.trading-system.md  CMakeLists.txt  README.md  build.sh
benchmark/strategy/: CMakeLists.txt  lead_lag_benchmark_support.h  lead_lag_feedback_runtime_benchmark.cpp  lead_lag_group_container_benchmark.cpp  lead_lag_runtime_benchmark.cpp  lead_lag_strategy_benchmark.cpp  lead_lag_submit_breakdown_benchmark.cpp  order_gateway_benchmark.cpp
benchmark/websocket/: CMakeLists.txt  active_spin_benchmark.cpp  affinity_policy_comparison_benchmark.cpp  benchmark_support.h  clock_source_benchmark.cpp  cold_path_handshake_benchmark.cpp  degraded_evaluator_benchmark.cpp  frame_codec_benchmark.cpp  io_benchmark_support.h  message_handler_dispatch_benchmark.cpp  prepared_write_benchmark.cpp  queued_frame_codec.h  runtime_loopback_benchmark.cpp  session_mixed_path_benchmark.cpp  session_read_path_benchmark.cpp  session_tls_write_path_benchmark.cpp  session_write_path_benchmark.cpp  third_party_frame_codec_comparison_benchmark.cpp
core/: CMakeLists.txt  aquila_core.cpp
core/base/: double_heap.h  fixed_active_slots.h  fixed_ordered_slot_pool.h  heap_buffer.h  histogram_quantile.h  monotonic_deque.h  ring_queue.h
core/common/: book_ticker_fusion_metadata_mode.h  constants.h  data_session_diagnostic_level.h  exchange.h  fusion_metadata_mode.h  numeric.h  order_ack_diagnostic_level.h  result.h  types.h
core/config/: CMakeLists.txt  book_ticker_fusion_config.cpp  book_ticker_fusion_config.h  data_reader_config.cpp  data_reader_config.h  data_session_config.cpp  data_session_config.h  fusion_config_parser.h  instrument_catalog.cpp  instrument_catalog.h  order_feedback_shm_config.cpp  order_feedback_shm_config.h  order_gateway_config.cpp  order_gateway_config.h  strategy_config.cpp  strategy_config.h  trade_fusion_config.cpp  trade_fusion_config.h  websocket_config.cpp  websocket_config.h
core/market_data/: CMakeLists.txt  binary_data_reader.h  book_ticker_fusion.h  book_ticker_fusion_config.h  book_ticker_fusion_metadata.h  book_ticker_fusion_metadata_policy.h  book_ticker_fusion_runner.h  book_ticker_fusion_thread.h  data_reader.h  data_reader_concepts.h  data_session_diagnostics.h  data_shm.h  data_shm_config.h  fastest_route_fusion.h  fastest_route_fusion_runner.h  fastest_route_fusion_thread.h  fusion_config.h  fusion_metadata.h  fusion_metadata_policy.h  fusion_metadata_writer.h  historical_data_reader.h  market_data_binary_format.h  realtime_data_reader.h  trade_fusion.h  trade_fusion_config.h  trade_fusion_metadata.h  trade_fusion_metadata_policy.h  trade_fusion_runner.h  trade_fusion_thread.h  types.h
core/strategy/: order_manager.h  order_types.h  strategy_context.h  strategy_runtime.h  trading_runtime.h
core/trading/: order_decimal.h  order_feedback_event.h  order_feedback_shm.h  order_gateway_client.h  order_gateway_shm.h  order_gateway_shm_types.h  order_id.h  order_latency.h  order_manager.h  order_pool.h  order_types.h  strategy_context.h  trading_runtime.h
core/utils/: mapped_file.h  numeric.h
core/websocket/: CMakeLists.txt  active_spin_loop.h  cold_path_loop.h  critical_session.h  degraded_evaluator.h  frame_codec.h  frame_codec_types.h  frame_parser.h  gate_ws_client.h  handshake.h  message_view.h  metrics.h  mirrored_buffer.h  plain_socket.h  prepared_write.h  queued_frame_codec.h  reconnect_classifier.h  runtime_clock.h  runtime_policy.h  socket_diagnostics.h  socket_timestamping.h  state_machine.h  tls_socket.h  types.h  websocket_client.h
exchange/binance/: CMakeLists.txt
exchange/bitget/: CMakeLists.txt
exchange/gate/: CMakeLists.txt
monitor/: CMakeLists.txt
monitor/demo/: symbol_workbench_demo_data.cpp  symbol_workbench_demo_data.h
monitor/market_data/: market_data_store.h  market_data_thread.cpp  market_data_thread.h  market_data_update.h
monitor/model/: account_monitor_snapshot.h  market_data_view_model.h  monitor_spsc_queue.h
monitor/tui/: gate_account_tui.cpp  quit_events.h  runtime_health_view.h  symbol_workbench_view.h
strategy/: CMakeLists.txt  gate_order_gateway.h  order_manager.h  order_pool.h  order_store.h  order_types.h  strategy.h
strategy/lead_lag/: README.md  alignment.h  config.cpp  config.h  cost_model.h  drift_guard.h  execution_state.h  market_calc_csv_writer.cpp  market_calc_csv_writer.h  market_calc_diagnostics.h  raw_market_state.h  recorders.h  shadow_evaluation.h  signal.h  signal_csv_writer.cpp  signal_csv_writer.h  strategy.h  strategy_test_hooks.h  threshold.h  types.h  window_stats.h
test/: CMakeLists.txt  hello_world_test.cpp
test/config/: CMakeLists.txt  book_ticker_fusion_config_test.cpp  data_reader_config_test.cpp  data_session_config_test.cpp  fusion_config_parser_test.cpp  order_feedback_session_config_test.cpp  order_feedback_shm_config_test.cpp  order_gateway_config_test.cpp  order_session_config_test.cpp  strategy_config_test.cpp  trade_fusion_config_test.cpp  websocket_config_test.cpp
test/monitor/: CMakeLists.txt  market_data_store_test.cpp  market_data_thread_test.cpp  market_data_view_model_test.cpp  monitor_spsc_queue_test.cpp  symbol_workbench_demo_data_test.cpp  symbol_workbench_view_test.cpp  tui_quit_events_test.cpp
test/strategy/: CMakeLists.txt  gate_order_gateway_test.cpp  lead_lag_alignment_test.cpp  lead_lag_config_test.cpp  lead_lag_drift_guard_test.cpp  lead_lag_execution_state_model_test.cpp  lead_lag_feedback_state_test.cpp  lead_lag_market_calc_csv_writer_test.cpp  lead_lag_raw_market_state_test.cpp  lead_lag_recorders_test.cpp  lead_lag_signal_test.cpp  lead_lag_strategy_interface_test.cpp  lead_lag_threshold_test.cpp  order_pool_test.cpp  order_store_test.cpp  strategy_order_feedback_shm_integration_test.cpp  strategy_test.cpp
tools/: CMakeLists.txt  binance_data_session.cpp  binance_futures_book_ticker_probe.cpp  gate_data_session.cpp  gate_future_market_data_session.cpp  gate_futures_book_ticker_probe.cpp  hello_world.cpp  websocket_latency_compare.cpp  websocket_latency_compare_support.h  websocket_probe.cpp
(+1121 files in other folders)
