add_subdirectory(core/common)
add_subdirectory(core/base)
add_subdirectory(config)
add_subdirectory(core/market_data)
add_subdirectory(core/trading)
add_subdirectory(core/utils)
add_subdirectory(strategy)
add_subdirectory(websocket)
add_subdirectory(exchange/gate/trading)
add_subdirectory(exchange/gate/sbe)
add_subdirectory(exchange/gate/market_data)
add_subdirectory(exchange/binance/market_data)
add_subdirectory(tools)
